--- a/app/src/main/res/layout/item_layout_bottom_indicator.xml
+++ b/app/src/main/res/layout/item_layout_bottom_indicator.xml
@@ -1,13 +1,14 @@
-<com.teaanddogdog.floattagviewlib.indicator.HBottomIndicatorItemView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                                     android:id="@+id/indicator"
-                                                                     android:layout_width="wrap_content"
-                                                                     android:layout_height="wrap_content"
-                                                                     android:layout_margin="1dp"
-                                                                     android:background="@drawable/bg_indicator"
-                                                                     app:init_translate_y="40dp">
+<com.teaanddogdog.floattagviewlib.indicator.HBottomIndicatorItemView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/indicator"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="1dp"
+    android:background="@drawable/bg_indicator"
+    app:init_translate_y="40dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/image_view_item"
         android:layout_width="60dp"
         android:layout_height="80dp"
